uplifted versions: java8 spring-boot 1.4.1.RELEASE spring-cloud Camden.SR1
removed JVM argument obselete in Java8