@@ -16,8 +16,8 @@
 
   <properties>
     <docker.image.name>${docker.registry.prefix}/infra-cloud-server</docker.image.name>
-    <spring.boot.version>1.3.0.RELEASE</spring.boot.version>
-    <spring.cloud.parent.version>Brixton.M3</spring.cloud.parent.version>
+    <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+    <spring.cloud.parent.version>Camden.SR1</spring.cloud.parent.version>
   </properties>
 
   <dependencyManagement>
@@ -111,7 +111,7 @@
         <version>2.17</version>
         <configuration>
           <forkCount>1</forkCount>
-          <argLine>-Xmx1024m -XX:PermSize=96m -XX:MaxPermSize=192m -Djava.security.egd=file:/dev/./urandom</argLine>
+          <argLine>-Xmx1024m -Djava.security.egd=file:/dev/./urandom</argLine>
           <includes>
             <include>**/*Test*.java</include>
             <include>**/*Test*.groovy</include>
